--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^18.2.0",
     "@angular/fire": "^19.0.0",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^19.1.5",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
